# MT5-HAFSA

./: .env.example  .gitignore  BUILDLOG.md  CLAUDE.md  README.md  RUNBOOK.md  pyproject.toml
configs/: correlations.yaml  costs.yaml  risk.yaml  sessions.yaml  strategies.yaml  symbols.yaml
configs/calendar/: sample_calendar.csv
mql5/: AegisFastGuard.mq5
src/aegis_velocity/: __init__.py  __main__.py  arming.py  cli.py  doctor.py  runtime.py
src/aegis_velocity/audit/: auditor.py  stats.py
src/aegis_velocity/backtest/: tick_engine.py
src/aegis_velocity/bridge/: protocol.py  server.py  sim_ea.py
src/aegis_velocity/consensus/: council.py
src/aegis_velocity/core/: anchors.py  bus.py  clock.py  config.py  events.py  ledger.py  security.py  state.py
src/aegis_velocity/cost/: calendar.py  engine.py  liquidity.py  sessions.py
src/aegis_velocity/dashboard/: app.py
src/aegis_velocity/execution/: engine.py  idempotency.py  intents.py  (+2 more)
tests/: exec_helpers.py  strategy_scenarios.py  test_anchors.py  test_audit_stats.py  test_auditor_arming.py  test_backtester.py  test_bridge.py  test_cli_dashboard.py  test_clock.py  test_config.py  test_consensus.py  test_cost_engine.py  test_execution.py  test_gateway.py  test_ledger.py  test_liquidity_persist.py  test_parity.py  test_pipeline.py  test_preflight.py  test_reconcile.py  test_risk_commander.py  test_runtime.py  test_security.py  test_sim_client.py  test_stage3_integration.py  test_state.py  test_strategies.py  test_symbols.py  test_velocity_guards.py
tests/golden/: F1.json  F2.json  F3.json  F4.json  F5.json
(+13 files in other folders)
