[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-velocity-mt5"
version = "0.1.0"
description = "AEGIS VELOCITY MT5 - tick-driven MT5 scalping desk with evidence-gated live trading"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "httpx", "ruff", "mypy", "types-PyYAML"]
# The MetaTrader5 package is Windows-only; installed on the trading host, never in CI.
windows = ["MetaTrader5>=5.0.45; sys_platform == 'win32'"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "MetaTrader5"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
